--- a/app/globals.css
+++ b/app/globals.css
@@ -62,3 +62,36 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+
+.section {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.tutorial {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 0.5rem;
+
+}
+
+.tutorial-border {
+  border-right: 16px solid white;
+  min-width: 20px;
+  background-color: skyblue;
+}
+
+.mce-edit-focus {
+  padding-top: 3em;
+}
+
+.MuiInput-input {
+  font-weight: bold;
+  font-size: 1.5rem;
+ 
+}
+
+.Mui-expanded .MuiInput-input {
+  font-size: 2rem;
+}
